--- a/src/main/resources/com/example/FACT/login.fxml
+++ b/src/main/resources/com/example/FACT/login.fxml
@@ -16,7 +16,7 @@
 
 <VBox alignment="CENTER" spacing="20.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.FACT.controller.LoginController">
    <children>
-      <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
+      <BorderPane fx:id="root" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
          <top>
             <AnchorPane BorderPane.alignment="CENTER">
                <children>
