--- a/src/main/resources/com/example/FACT/createSet.fxml
+++ b/src/main/resources/com/example/FACT/createSet.fxml
@@ -32,12 +32,18 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<VBox xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.FACT.controller.CreateSetController" minWidth="0.0" minHeight="0.0" prefWidth="-1.0" prefHeight="-1.0" maxWidth="1.7976931348623157E308" maxHeight="1.7976931348623157E308">
+<VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="-1.0" prefWidth="-1.0" styleClass="scene-root content" stylesheets="@modern.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.FACT.controller.CreateSetController">
    <children>
       <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
          <top>
@@ -45,20 +51,12 @@
                <padding>
                   <Insets bottom="25.0" />
                </padding>
-               <Button fx:id="exit" mnemonicParsing="false" onAction="#exitCreate" style="-fx-border-color: #3578C9; -fx-background-color: FFFFFF; -fx-border-radius: 5; -fx-border-width: 2;" text="EXIT" textFill="#3578c9">
-                  <HBox.margin>
-                     <Insets right="10.0" top="4.0" />
-                  </HBox.margin>
-                  <font>
-                     <Font name="Helvetica Bold" size="18.0" />
-                  </font>
-               </Button>
             </AnchorPane>
          </top>
          <bottom>
             <AnchorPane prefHeight="615.0" prefWidth="1204.0" BorderPane.alignment="CENTER">
                <children>
-                  <ComboBox fx:id="ApplicationComboBox" layoutX="364.0" layoutY="85.0" minHeight="60.0" minWidth="400.0" prefHeight="60.0" prefWidth="400.0" promptText="Select Application">
+                  <ComboBox fx:id="ApplicationComboBox" layoutX="364.0" layoutY="85.0" minHeight="60.0" minWidth="400.0" prefHeight="60.0" prefWidth="400.0" promptText="Select Application" style="-fx-font-size: 14px;" styleClass="combo-md">
                   </ComboBox>
 
                   <Button fx:id="SaveButton" layoutX="623.0" layoutY="479.0" mnemonicParsing="false" onAction="#CreateSetAction" prefHeight="60.0" prefWidth="141.0" style="-fx-background-color:  #22C55E;" text="Save" textFill="WHITE">
@@ -81,7 +79,7 @@
                         <Font size="25.0" />
                      </font>
                   </TextField>
-                  <ComboBox fx:id="DifficultyComboBox" layoutX="367.0" layoutY="237.0" minHeight="60.0" minWidth="400.0" prefHeight="60.0" prefWidth="400.0" promptText="Select difficulty">
+                  <ComboBox fx:id="DifficultyComboBox" layoutX="367.0" layoutY="237.0" minHeight="60.0" minWidth="400.0" prefHeight="60.0" prefWidth="400.0" promptText="Select difficulty" style="-fx-font-size: 14px;" styleClass="combo-md">
                   </ComboBox>
 
                   <TextField fx:id="DescriptionTextField" layoutX="368.0" layoutY="311.0" minHeight="60.0" minWidth="400.0" prefHeight="60.0" prefWidth="400.0" promptText="Description">
