--- a/src/main/resources/com/example/FACT/register.fxml
+++ b/src/main/resources/com/example/FACT/register.fxml
@@ -1,22 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.geometry.Rectangle2D?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.effect.Blend?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.FACT.controller.RegistrationController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="scene-root content" stylesheets="@../css/modern.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.FACT.controller.RegistrationController">
    <children>
-      <VBox alignment="CENTER" spacing="20.0" style="-fx-background-color: ffffffff;">
+      <VBox alignment="CENTER" spacing="20.0" style="-fx-background-color: ffffffff;" styleClass="card auth-card">
          <children>
             <BorderPane fx:id="root" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
                <top>
@@ -28,14 +20,6 @@
                            </viewport>
                            <Image url="@../../../images/logo.png" />
                         </ImageView>
-                        <Button fx:id="closeButton" contentDisplay="CENTER" mnemonicParsing="false" onAction="#closeButtonAction" prefHeight="40.0" prefWidth="40.0" style="-fx-background-color: white; -fx-border-color: #3578C9; -fx-border-width: 3; -fx-border-radius: 7;" text="X" textAlignment="CENTER" textFill="#3578c9" AnchorPane.leftAnchor="-50.0" AnchorPane.topAnchor="-10.0">
-                           <font>
-                              <Font name="Helvetica Bold" size="24.0" />
-                           </font>
-                           <effect>
-                              <Blend />
-                           </effect>
-                        </Button>
                      </children>
                      <padding>
                         <Insets bottom="25.0" />
